--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- 1.日志 -->
@@ -25,7 +26,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.1</version>
+      <version>1.2.3</version>
     </dependency>
 
     <!-- 2.数据库 -->
@@ -119,6 +120,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
+        <scope>test</scope>
     </dependency>
 
     <!-- redis客户端:Jedis -->
